# services-deployment

./: .gitignore  Dockerfile  Jenkinsfile  README.md  creat_db_cloudsql.txt  docker-compose-services.yaml  export_env.sh  pyproject.toml  requirements.txt  setup_gke.sh
api-gateway/: Dockerfile  api_gateway.py  requirements.txt
api_gateway/: api_gateway.py  database.py  logging_config.py  models.py  tracing.py
deployments/: allow-gateway-to-jaeger.yaml  api-gateway-servicemonitor.yaml  clear_kibana.sh  discord-bridge.yaml  es-ca.crt  jaeger-agent-service.yaml  letsencrypt-issuer.yaml  secrets.yaml  test-pod.yaml
deployments/api_gateway/: Chart.yaml  values.yaml
deployments/api_gateway/templates/: deployment.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deployments/elasticsearch/: values.yaml
deployments/elasticsearch/templates/: statefulset.yaml
deployments/filebeat/: values.yaml
deployments/jaeger/: Chart.yaml  allow-collector-ingress.yaml  values.yaml
deployments/jaeger/charts/: elasticsearch-19.14.0.tgz
deployments/kibana/: values.yaml
deployments/kube-prometheus-stack/: values.yaml
deployments/my-rabbitmq/: values.yaml
deployments/my-rabbitmq/templates/: secret.yaml  (+2 more)
deployments/rabbitmq/: values.yaml
jenkins/: docker-compose-jenkins.yaml
postgres/: create_database.sql  init.sql
temp_dev/: filebeat_vm.yml
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfstate.1761660254.backup  variables.tf
terraform/prod/: main.tf  network.tf  outputs.tf  variables.tf
tests/: conftest.py  test_api_gateway.py
(+3 files in other folders)
