[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "services-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [

]


[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*"]
